update trunk to git 76eb20e20cd1858ca488947a252579119fb4a62d
git-svn-id: https://plugins.svn.wordpress.org/link-roundups/trunk@1231339 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/less/lroundups-admin.less
+++ b/less/lroundups-admin.less
@@ -91,3 +91,47 @@ Create MailChimp Campaign Button
     margin: 10px auto;
   }
 }
+/* ==========================================================================
+New Saved Links dialog
+========================================================================== */
+.wp-admin.post-new-php.post-type-rounduplink #minor-publishing-actions{
+  display: none;
+}
+
+/* ==========================================================================
+Recent Roundups Editor Styles
+========================================================================== */
+#link_roundups_roundup {
+  .inside {
+    min-height: 250px;
+  }
+  .pagination {
+    margin: 10px 0;
+    &:last-child {
+	  padding-bottom: 15px;
+    }
+  }
+  #filter_links {
+    margin: 10px 0;
+  }
+}
+
+div.display-saved-links {
+  div.pagination {
+    height:30px;
+    span,
+    a {
+      color: #000;
+      text-decoration: none;
+    }
+    .current {
+        color: #C7C7C7;
+    }
+  }
+  .none-found {
+  margin:.25em 0 0.5em 0;
+  display:block;
+  font-style:italic;
+  font-weight:bold;
+  }
+}
