--- a/less/lroundups.less
+++ b/less/lroundups.less
@@ -1,11 +1,11 @@
 /* ==========================================================================
 Link Roundups Saved Link Paragraph Wrapper Style
 ========================================================================== */
-
 p.lr-saved-link {
+  float: left;
   display: block;
-  padding-left: 45px;
   vertical-align: top;
+  width: 100%;
 }
 
 .wp-editor p.lr-saved-link {
@@ -22,6 +22,11 @@ p.lr-saved-link em {
   color: #808080;
 }
 
+p.lr-saved-link img {
+  float: left;
+  margin: 0 1em 1em 0;
+}
+
 /* ==========================================================================
 Sponsored Link Style
 ========================================================================== */
@@ -36,43 +41,8 @@ p.lr-saved-link.sponsored {
 }
 
 /* ==========================================================================
-Recent Roundups Editor Styles
+Saved Links Widget
 ========================================================================== */
-#link_roundups_roundup {
-  .inside {
-    min-height: 250px;
-  }
-  .pagination {
-    margin: 10px 0;
-    &:last-child {
-	  padding-bottom: 15px;    
-    }
-  }
-  #filter_links {
-    margin: 10px 0;
-  }
-}
-
-div.display-saved-links {
-  div.pagination {
-    height:30px;
-    span,
-    a {
-      color: #000;
-      text-decoration: none;
-    }
-    .current {
-        color: #C7C7C7;
-    }
-  }
-  .none-found {
-  margin:.25em 0 0.5em 0;
-  display:block;
-  font-style:italic;
-  font-weight:bold;
-  }
-}
-
 .widget.saved-links {
   h5 {
     margin-bottom: 2px;
@@ -90,4 +60,36 @@ div.display-saved-links {
       font-style: italic;
     }
   }
+  div.post-lead {
+    float: left;
+    img {
+      float: left;
+      margin: 0 1em 1em 0;
+    }
+  }
+}
+
+// fix for display of checkbox in header of saved links admin box
+.wp-list-table.lroundups-links {
+  tfoot td,
+  thead td {
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 3px;
+    input {
+      margin-left: 8px;
+    }
+  }
+  thead td {
+    border-bottom: 1px solid #e1e1e1
+  }
+  tfoot td {
+    border-top: 1px solid #e1e1e1
+  }
+}
+button.button.append-saved-links {
+  margin: 10px 10px 10px 0;
+}
+.tablenav .actions select[name="link_date"] {
+  float: none;
 }
